--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,46 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.6",
+    "@hookform/resolvers": "^3.9.0",
+    "@lottiefiles/dotlottie-react": "^0.8.3",
+    "@lottiefiles/lottie-player": "^2.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lottie-web": "^5.12.2",
+    "lucide-react": "^0.414.0",
+    "postcss": "^8.4.39",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-lottie": "^1.2.4",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lottie": "^1.2.10",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
